CutScene.stop(), BG blurring in map mode
The cutscene can now be stopped with the above function.  Cutscenes are
stopped whenever user clicks the map or base button.
Gave default agents a hardcoded origSize, 72 x 72.
The BG image now blurs while the map is up.

--- a/client/_storyMaker/story.css
+++ b/client/_storyMaker/story.css
@@ -1,3 +1,7 @@
+.blur {
+	filter:blur(5px);
+}
+
 .restoreBrightness {
   -webkit-animation: filter-brightness_animation 2s;
   animation: filter-brightness_animation 2s;
@@ -305,6 +309,8 @@ div.storyButton {
 	font-size: 2.0vh;
 
 	margin-top: 4px;
+
+	padding: 4px;
 
 	color: yellow;
 
